[package]
name = "rush-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
async-std = { version = "1.12.0", features = ["attributes"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
async-recursion = "1.0.4"
