[package]
    name    = "rush-service"
    version = "0.1.0"
    authors = [ "MaZe <45102464+MaZe3D@users.noreply.github.com>", "CrazyCraftix <43807375+CrazyCraftix@users.noreply.github.com>", "Benedikt Hauser <106589045+atalior@users.noreply.github.com>" ]
    edition = "2021"
    license = "GPL-3.0"

[profile.release]
    lto = "off" # disable link-time optimization - apparently the xtensa codegen backend has issues with that
    opt-level = 2

[profile.dev]
    lto = "off" # disable link-time optimization - apparently the xtensa codegen backend has issues with that

[dependencies]
    embassy-executor = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
    embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
    embassy-futures = "0.1.0"
    esp32s3-hal = { version = "0.8.0", features = [ "async" ] }
    embassy-time = { version = "0.1.0", features = ["nightly"] }
    embedded-svc = { version = "0.23.1", default-features = false }
    esp-backtrace = { version = "0.6.0", features = ["panic-handler", "exception-handler", "print-uart", "esp32s3"] }
    esp-println = { version = "0.5.0", features = ["log", "esp32s3"] }
    esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "7dc4595d70ef5e753f64db59d58880905814239f", features = ["esp32s3", "esp32s3-async", "embedded-svc", "wifi", "embassy-net"] }
    embedded-io = "0.4.0"
    log = "0.4.17"

    enum_dispatch = "0.3.11"
    nom = { version = "7.0.0", default-features = false }

    stackfmt = "0.1.2"
