[package]
    name    = "rush"
    version = "0.1.0"
    authors = [ "MaZe <45102464+MaZe3D@users.noreply.github.com>", "CrazyCraftix <43807375+CrazyCraftix@users.noreply.github.com>", "Benedikt Hauser <106589045+atalior@users.noreply.github.com>" ]
    edition = "2021"
    license = "GPL-3.0"

[dependencies]
    esp32s3-hal   = { git = "https://github.com/esp-rs/esp-hal", rev = "fa3627c", version = "0.9", features = [ "default", "embassy", "embassy-time-timg0", "psram_2m" ] }
    esp-backtrace = { version = "0.5.0", features = [ "esp32s3", "panic-handler", "print-uart" ] }
    esp-println   = { version = "0.3.1", features = [ "esp32s3" ] }
    esp-alloc     = { version = "0.3.0" }

    embassy-executor = { version = "0.2.0", features = [ "nightly", "integrated-timers", "arch-xtensa", "executor-thread" ] }
    embassy-time     = { version = "0.1.1" }

    static_cell = "1.0.0"

    nom = { version = "7.0.0", default-features = false }

    enum_dispatch = "0.3.11"
